--- a/SeleniumFramework/pom.xml
+++ b/SeleniumFramework/pom.xml
@@ -43,10 +43,10 @@
     <scope>test</scope>
 </dependency>
 
-<!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
+<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 <dependency>
-    <groupId>com.mysql</groupId>
-    <artifactId>mysql-connector-j</artifactId>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
     <version>8.0.33</version>
 </dependency>
 
